--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "description": "Create a Pull-Request (merge-request in GitLab) description based on the git diff and markdown files and other repo metadata.",
   "permissions": ["tabs", "activeTab", "scripting"],
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html"
   },
   "icons": {
