--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,11 @@
   "name": "Better-pr",
   "version": "1.0",
   "description": "Create a Pull-Request (merge-request in GitLab) description based on the git diff and markdown files and other repo metadata.",
-  "permissions": ["tabs", "activeTab", "scripting"],
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "scripting"
+  ],
   "action": {
     "default_popup": "popup.html"
   },
@@ -17,11 +21,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://github.com/*/pull/*"],
-      "js": ["content.js"]
+      "matches": [
+        "https://github.com/*/pull/*"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ]
 }
-
-
-
